# Instelec

./: .gitignore  BUGS_CONSOLIDADOS.md  CHANGELOG.md  CLAUDE.md  COMPARATIVO_INFRAESTRUCTURA.md  Dockerfile  OPTIMIZATION_ISSUES.md  OPTIMIZATION_PROGRESS.md  PLAN_DESARROLLO.md  PLAN_TRABAJO_MANTENIMIENTO_LINEAS.md  README.md  conftest.py  cronograma-aplicativo.html  cronograma-proyectos.html  cronograma.html  presentacion.html  pyproject.toml
.github/workflows/: ci.yml  deploy-cloudrun.yml  deploy-low-cost.yml  deploy.yml
Documentacion/: 01022026-REPORTE DIARIO-F01 v1 -.xlsx  2026.01.06 1877 Avisos Abiertos.xlsx  AVANCES.xlsx  BASE DE DATOS.xlsx  Copia de AVANCE PDO 24-11-2025.xlsx  Dahboard obra civil.xlsx  Dashboard montaje.xlsx  Excel aplicativo L.T alta tensión, Instelec.xlsx  INDICADORES CONSTRUCCION.xlsx  INTEGRACION_DJANGO.md  INstelec 1 abril.vtt  Instelec Contrucción de líneas .vtt  Montaje.xlsx  Obra civil.xlsx  PDEO -Detalle 2024-2025-2026.xlsx  PRESUPUESTO.xlsx  PROPUESTA_DASHBOARD.md  PYG.xlsx  Programación - S18.xlsx  Programación S06.xlsx  SPT PINTURA.xlsx  Seguimiento aplicativo Instelec (1).vtt  Seguimiento aplicativo Instelec (10).vtt  Seguimiento aplicativo Instelec (11).vtt  Seguimiento aplicativo Instelec (2).vtt  Seguimiento aplicativo Instelec (3).vtt  Seguimiento aplicativo Instelec (4).vtt  Seguimiento aplicativo Instelec (5).vtt  Seguimiento aplicativo Instelec (6).vtt  Seguimiento aplicativo Instelec (7).vtt  Seguimiento aplicativo Instelec (8).vtt  Seguimiento aplicativo Instelec (9).vtt  Seguimiento aplicativo Instelec.vtt  TENDIDO.xlsx  Torres Transelca.kmz  csv_En_ElectromeK.csv  csv_Entrega.csv  csv_Entrega_Flechas.csv  csv_H._LLuvia.csv  csv_Hochimin.csv  (+15 more)
SPRINTS/: PLAN_2026-05-18_mantenimiento_lineas.md  PLAN_2026-05-21_portafolio_completo.md  PLAN_2026-05-22_uis_oc_montaje_tendido.md  PLAN_2026-05-26_modulo_excel_paridad.md  PLAN_2026-05-28_103_financiero_complemento.md  PLAN_2026-06-02_124_carga_cuadrillas_s18.md  PLAN_2026-06-06_issue101_vanos.md  PLAN_2026-06-09_clase_cimentacion_excavacion.md  PLAN_2026-06-09_dashboard_oc_3_graficas.md  PLAN_2026-06-09_inputs_borde_visible.md  PLAN_2026-07-04_programacion_semanal_cuadrillas.md  PLAN_2026-07-12_150_cronograma_pesos_montaje_real.md  PLAN_2026-07-12_171_hochiminh_fase1.md  PLAN_2026-07-12_183_mejoras_visuales.md
apps/actividades/: api.py  apps.py  exporters.py  forms.py  importers.py  models.py  (+8 more)
config/: urls.py
docs/: API.md  REPORTE_NAVEGACION_E2E.md
infrastructure/: gcs-cors.json
mobile/: pubspec.yaml
requirements/: base.txt
templates/: base.html  cronograma.html  presentacion_entrega.html
(+730 files in other folders)
