[project]
name = "transmaint"
version = "1.0.0"
description = "Sistema de Gestión Integral para Mantenimiento de Líneas de Transmisión"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [
    {name = "Indunnova S.A.S.", email = "contacto@indunnova.com"}
]
keywords = ["django", "maintenance", "transmission-lines", "gis"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    ".git",
    "__pycache__",
    "migrations",
    ".venv",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "DJ",  # flake8-django
    "S",   # flake8-bandit
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "S101",  # assert statements
]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]
addopts = [
    "--reuse-db",
    "--nomigrations",
    "-ra",
    "-q",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["apps"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
strict = false  # Keep false but add specific checks
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false  # Gradual typing
check_untyped_defs = true
ignore_missing_imports = true

# Strict for new code in API module
[[tool.mypy.overrides]]
module = "apps.api.*"
disallow_untyped_defs = true

[tool.django-stubs]
django_settings_module = "config.settings.local"
